--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@ body {
 }
 
 header {
-    background: #333;
-    color: white;
+    background: #181818;
+    color: #FFFDD0;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Aligns content to the left */
+    align-items: flex-start; 
 }
 
 .header-content {
@@ -32,12 +32,13 @@ h1 {
 }
 
 .logo {
-    width: 80px; /* Adjust size as needed */
+    width: 80px; 
     height: auto;
     margin-right: 20px;
 }
 
 #search {
+    background-color:  #FFFDD0;
     margin-top: 10px;
     padding: 8px;
     width: 250px;
@@ -67,3 +68,23 @@ h1 {
     width: 100%;
     height: auto;
 }
+
+.alert-button {
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 10px 20px;
+    border: 2px solid red;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: 0.3s;
+    box-shadow: 0 0 10px red;
+  }
+  
+  .alert-button:hover {
+    background-color: red;
+    color: black;
+    box-shadow: 0 0 20px red;
+  }
+  
