--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ h1 {
     margin: 15px;
     width: 260px;
     text-align: center;
-    box-shadow: 0 0 10px red;
+    box-shadow: 0 0 10px rgb(99, 4, 4);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border-radius: 10px;
     display: flex;
@@ -171,7 +171,7 @@ h1 {
 }
 
 .delete-criminal {
-    background-color: red;
+    background-color: rgb(201, 5, 5);
 }
 
 .delete-criminal:hover {
