--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,40 @@ h1 {
     margin-left: 20px;
 }
 
+nav {
+    background-color: black;
+    padding: 15px;
+    margin-left: 440px;
+
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 0 15px;
+    display: inline-block;
+}
+
+nav ul li a {
+    color:  #FFFDD0;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    transition: color 0.3s ease-in-out;
+}
+
+.nav-links .active {
+    color: red;
+}
+
+
+nav ul li a:hover {
+    color: red;
+}
 
 #criminals-container {
     display: flex;
